# c_game_project

./: .gitignore  CMakeLists.txt  Doxyfile
src/: display_menu.c  display_tetris.c  main.c
